# cippolippo-ollama

./: Cargo.toml  README.md  config.toml
src/: config.toml  main.rs
