[package]
name = "cippolippo-ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
dialoguer = "0.11.0"
fancy = "0.3.1"
ollama-rs = "0.1.7"
owo-colors = "4.0.0"
spinners = "4.1.1"
tokio =  { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
