[package]
name = "cippolippo-ollama"
version = "0.1.5"
authors = ["Gennaro Riccio"]
description = "Semplice Copilot con Ollama"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "3.0.0"
dialoguer = "0.11.0"
fancy = "0.3.1"
ollama-rs = { version = "0.2.1", features = ["stream"] }
owo-colors = "4.1.0"
spinners = "4.1.1"
tokio =  { version = "1.41.1", features = ["full"] }
toml = "0.8.10"
serde = { version = "1.0.214", features = ["derive"] }
futures-util = "0.3.31"
tokio-stream = "0.1.16"
